<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="moscow">Moscow</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best seller</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="price_dollar">$%1$s</string>
    <string name="filters">Filters</string>
</resources>