<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.explorer.presentation.view.HomeStoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/filter_menu"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/geo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/moscow"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:drawableStartCompat="@drawable/outline_place_24" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/content"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp">

                    <TextView
                        android:id="@+id/select_category_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/select_category"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/view_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/select_category_text_view"
                        android:layout_alignParentEnd="true"
                        android:text="@string/view_all"
                        android:textColor="@color/secondaryColor" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="24dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="8dp"
                        android:layout_margin="8dp"
                        app:cardElevation="2dp"
                        app:cardCornerRadius="30dp"
                        android:layout_toStartOf="@+id/qr_code">

                        <androidx.appcompat.widget.SearchView
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            app:iconifiedByDefault="false"
                            android:textAlignment="center"
                            app:queryBackground="@android:color/transparent"
                            app:queryHint="Search"
                            app:searchIcon="@drawable/outline_search_24" />
                    </com.google.android.material.card.MaterialCardView>

                    <ImageButton
                        android:id="@+id/qr_code"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/circle_bigger"
                        android:src="@drawable/outline_qr_code_24"
                        app:tint="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp">

                    <TextView
                        android:id="@+id/hot_sales_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/hot_sales"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/see_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/hot_sales_text_view"
                        android:layout_alignParentEnd="true"
                        android:text="@string/see_more"
                        android:textColor="@color/secondaryColor" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_hot_sales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:id="@+id/best_seller_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/best_seller"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/see_more_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/best_seller_text_view"
                        android:layout_alignParentEnd="true"
                        android:text="@string/see_more"
                        android:textColor="@color/secondaryColor" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_best_sellers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="48dp"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_filters"
        android:layout_width="match_parent"
        android:clickable="true"
        android:background="@drawable/rounded_bottom_sheet"
        android:elevation="16dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/cancel"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/rounded_corners_blue_button"
                android:src="@drawable/close"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/filter_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:text="@string/filter_options" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/done"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textSize="14sp"
                android:textStyle="bold"
                android:elevation="0dp"
                app:elevation="0dp"
                app:backgroundTint="@color/secondaryColor"
                app:cornerRadius="8dp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            android:text="@string/brand" />

        <Spinner
            android:id="@+id/brand_spinner"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/spinner_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            android:text="@string/price" />

        <Spinner
            android:id="@+id/price_spinner"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/spinner_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            android:text="@string/size" />

        <Spinner
            android:id="@+id/size_spinner"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/spinner_background"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>